<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainScreen">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardEnrollment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:minHeight="210dp">


            <ImageView
                android:id="@+id/enImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/enrollment" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/enImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/enrollment" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardEnrollment"
        android:layout_marginStart="50dp"
        android:id="@+id/cardVerification"

        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="210dp">


            <ImageView
                android:id="@+id/vfImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/fingerprint_24" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vfImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/verification" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:text="@string/version_1_7"
        android:layout_alignParentBottom="true"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>


</RelativeLayout>