<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:backgroundTint="@color/green"
    tools:context=".ui.AddProfileDetails">

    <RelativeLayout
        android:id="@+id/card_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="120dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/name"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:maxLines="1">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputLayoutName"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/phoneNumber"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:prefixText="+91">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:maxLength="10"

                        android:maxLines="1">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/addDocument"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputLayoutNumber"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:drawableStart="@drawable/add_circle_24"
                    android:drawablePadding="8dp"
                    android:text="Documents" />


                <ImageView
                    android:id="@+id/documentImage"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/addDocument"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:visibility="gone" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/hideDoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/documentImage"
                    android:layout_alignEnd="@id/documentImage"
                    android:backgroundTint="@color/orange"
                    android:visibility="gone"
                    app:cardCornerRadius="50dp"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:src="@drawable/highlight_off_24" />
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#FB7440"
                    android:padding="16dp"
                    android:text="@string/submit"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="16dp" />


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ProfileImageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/lag" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/uploadProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/ProfileImageview"
            android:layout_alignBottom="@id/ProfileImageview"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/camera_alt_24" />
        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

</RelativeLayout>